# EmuDeck

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  EmuDeck SD.desktop  EmuDeck.desktop  EmuDeck_shell.ps1  README.md  RetroSteam.desktop  UNSUPPORTED.txt  api.py  api.sh  changelog.md  cloudSyncHealth.sh  doInstall.sh  execFn.sh  execFnList.sh  export.sh  gc-widescreen.md  import.sh  install-arm.sh  install-beta.sh  install-darwin-early.sh  install-darwin.sh  install-early.sh  install-unstable.sh  install.sh  installCLI.sh  latest.md  logo.ans  package-lock.json  rsync.awk  settings.sh  setup.py  setup.sh  system-setup.sh  test.sh  test_sample.py  test_sample.sh  uninstall.sh  unit-testing.sh  (+6 more)
.github/: FUNDING.yml
EmuScripts/: emuDeckCemu.sh  emuDeckCitra.sh  emuDeckDolphin.sh  emuDeckDuckStation.sh  emuDeckPCSX2.sh  emuDeckPPSSPP.sh  emuDeckPcsx2.sh  emuDeckPrimehack.sh  emuDeckRPCS3.sh  emuDeckRetroArch.sh  emuDeckRpcs3.sh  emuDeckXemu.sh  emuDeckYuzu.sh
ToolScripts/: emuDeckESDE.sh  installSRM.sh
android/: android_settings.sh  setup.sh  vars.sh
core/: all.py  dialog.qss  imports.py  vars.py
darwin/: api.sh
flatpakupdate/: flatpakupdate.sh
functions/: ElectronISFinished.sh  RAAchievment.sh  RABezels.sh  RACores.sh  RASNES.sh  RAautoSave.sh  RunFunc.sh  all-darwin.sh  all.sh  allCloud.ps1  appImageInit.sh  app_init.py  autofix.sh  changeLine.sh  checkBIOS.sh  checkForFile.sh  checkInstalledEmus.sh  checkPSBIOS.sh  cloudServicesManager copy.sh  cloudServicesManager.sh  cloudServicesManager_dev.sh  cloudSyncHealth.sh  configESDE.sh  configEmuAI.sh  configEmuFP.sh  configSRM.sh  createFolders.sh  (+40 more)
tools/retro-library/charset_normalizer/: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  __init__.py  api.py  dev-requirements.txt  legacy.py  md.py  models.py  pyproject.toml  setup.cfg  setup.py  utils.py
tools/retro-library/charset_normalizer/.github/: FUNDING.yml  dependabot.yml
tools/retro-library/charset_normalizer/.github/workflows/: cd.yml  ci.yml  codeql.yml  scorecards.yml
tools/retro-library/charset_normalizer/cli/: __main__.py
tools/retro-library/charset_normalizer/data/: sample-bulgarian.txt  sample-polish.txt  sample-spanish.txt
tools/retro-library/charset_normalizer/docs/: api.rst  conf.py  index.rst
tools/retro-library/charset_normalizer/docs/community/: faq.rst  featured.rst  speedup.rst  why_migrate.rst
tools/retro-library/charset_normalizer/docs/user/: advanced_search.rst  cli.rst  handling_result.rst  miscellaneous.rst  support.rst
tools/retro-library/charset_normalizer/tests/: test_base_detection.py  test_cli.py  test_coherence_detection.py  test_detect_legacy.py  test_edge_case.py  test_full_detection.py  test_isbinary.py  test_large_payload.py  test_logging.py  test_mess_detection.py  test_preemptive_detection.py  test_utils.py
(+5307 files in other folders)
